--- a/packages/excalidraw/package.json
+++ b/packages/excalidraw/package.json
@@ -1,32 +1,24 @@
 {
   "name": "@excalidraw/excalidraw",
   "version": "0.18.0-rc.1",
-  "main": "./dist/prod/index.js",
   "type": "module",
+  "types": "./dist/types/excalidraw/index.d.ts",
+  "main": "./dist/prod/index.js",
   "module": "./dist/prod/index.js",
   "exports": {
-    "./types": {
-      "types": "./dist/types/excalidraw/types.d.ts"
-    },
-    "./types/*": {
-      "types": "./dist/types/excalidraw/*"
-    },
     "./index.css": {
       "development": "./dist/dev/index.css",
       "production": "./dist/prod/index.css"
     },
     ".": {
+      "types": "./dist/types/excalidraw/index.d.ts",
       "development": "./dist/dev/index.js",
-      "production": "./dist/prod/index.js",
-      "types": "./dist/types/excalidraw/index.d.ts"
+      "production": "./dist/prod/index.js"
     },
     "./*": {
-      "development": "./dist/dev/index.js",
-      "production": "./dist/prod/index.js",
-      "types": "./dist/types/excalidraw/*"
+      "types": "./../excalidraw/dist/types/excalidraw/*"
     }
   },
-  "types": "./dist/types/excalidraw/index.d.ts",
   "files": [
     "dist/*"
   ],
@@ -34,7 +26,6 @@
     "access": "public"
   },
   "description": "Excalidraw as a React component",
-  "repository": "https://github.com/excalidraw/excalidraw",
   "license": "MIT",
   "keywords": [
     "excalidraw",
@@ -116,10 +107,8 @@
     "@types/resize-observer-browser": "0.1.7",
     "ansicolor": "2.0.3",
     "autoprefixer": "10.4.7",
-    "babel-loader": "8.2.5",
     "babel-plugin-transform-class-properties": "6.24.1",
     "cross-env": "7.0.3",
-    "css-loader": "6.7.1",
     "dotenv": "16.0.1",
     "esbuild": "0.19.10",
     "esbuild-sass-plugin": "2.16.0",
@@ -127,24 +116,16 @@
     "fake-indexeddb": "3.1.7",
     "fonteditor-core": "2.4.1",
     "harfbuzzjs": "0.3.6",
-    "import-meta-loader": "1.1.0",
     "jest-diff": "29.7.0",
-    "mini-css-extract-plugin": "2.6.1",
-    "postcss-loader": "7.0.1",
-    "sass-loader": "13.0.2",
-    "size-limit": "9.0.0",
-    "style-loader": "3.3.3",
-    "ts-loader": "9.3.1",
     "typescript": "4.9.4"
   },
+  "repository": "https://github.com/excalidraw/excalidraw",
   "bugs": "https://github.com/excalidraw/excalidraw/issues",
   "homepage": "https://github.com/excalidraw/excalidraw/tree/master/packages/excalidraw",
   "scripts": {
     "gen:types": "rm -rf types && tsc",
     "build:esm": "rm -rf dist && node ../../scripts/buildPackage.js && yarn gen:types",
-    "pack": "yarn build:umd && yarn pack",
     "start": "node ../../scripts/buildExample.mjs && vite",
-    "build:example": "node ../../scripts/buildExample.mjs",
-    "size": "yarn build:umd && size-limit"
+    "build:example": "node ../../scripts/buildExample.mjs"
   }
 }
