Package code splitting, fixing examples

--- a/examples/excalidraw/with-script-in-browser/package.json
+++ b/examples/excalidraw/with-script-in-browser/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@excalidraw/excalidraw": "*"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "vite": "5.0.12",
