--- a/examples/excalidraw/package.json
+++ b/examples/excalidraw/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@excalidraw/excalidraw": "*"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "typescript": "^5"
