Preparing example for sandbox

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "build:preview": "yarn --cwd ./excalidraw-app build:preview",
     "start": "yarn --cwd ./excalidraw-app start",
     "start:production": "yarn --cwd ./excalidraw-app start:production",
-    "start:example": "yarn --cwd ./examples/excalidraw/with-script-in-browser start",
+    "start:example": "yarn build:package && yarn --cwd ./examples/excalidraw/with-script-in-browser start",
     "test:all": "yarn test:typecheck && yarn test:code && yarn test:other && yarn test:app --watch=false",
     "test:app": "vitest",
     "test:code": "eslint --max-warnings=0 --ext .js,.ts,.tsx .",
