--- a/examples/excalidraw/with-script-in-browser/.codesandbox/tasks.json
+++ b/examples/excalidraw/with-script-in-browser/.codesandbox/tasks.json
@@ -15,11 +15,11 @@
       "runAtStart": false
     },
     "start": {
-      "name": "Start Excalidraw",
+      "name": "Start Example",
       "command": "yarn start",
       "runAtStart": true,
       "preview": {
-        "port": 3000
+        "port": 3001
       }
     },
     "install-deps": {
